--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
-  build:
+  buildu14:
     working_directory: ~/LGML
     docker:
-      - image: ubuntu
+      - image: ubuntu:14.04
         environment:
           ARCH_FLAGS: -m64 # arch for linux makefile
           DST_LGML_PATH: /tmp/build
@@ -21,7 +21,33 @@ jobs:
           name: build and package LGML
           command: |
             sh Scripts/linux/installExportDeps.sh
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python3 Scripts/buildScript.py --packagesuffix=ubuntu14 --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python3 Scripts/buildScript.py --build --package --export
+            ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
+      - store_artifacts:
+          path: /tmp/build/
+  buildu16:
+    working_directory: ~/LGML
+    docker:
+      - image: ubuntu:16.04
+        environment:
+          ARCH_FLAGS: -m64 # arch for linux makefile
+          DST_LGML_PATH: /tmp/build
+    steps:
+      - checkout
+      - run:
+          name: install LGML dependencies
+          command: |
+            apt-get -qq update
+            apt-get install -y git
+            git submodule update --init --recursive
+            sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh
+
+      - run:
+          name: build and package LGML
+          command: |
+            sh Scripts/linux/installExportDeps.sh
+            python3 Scripts/buildScript.py --packagesuffix=ubuntu16 --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
             python3 Scripts/buildScript.py --build --package --export
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
@@ -71,6 +97,7 @@ jobs:
           ARCH_FLAGS_PI2: -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard  # -ffast-math # arch flags for JUCEMakefile -> RPI2
           DST_LGML_PATH: /tmp/buildRasp
           PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig
+          BUILDLGML_CMD_BASE: python3 Scripts/buildScript.py --configure --exportpath="/tmp/buildRasp/" --os=linux --build --package --export
 
     steps:
       - checkout
@@ -94,15 +121,13 @@ jobs:
             export CXX=arm-linux-gnueabihf-g++
             sh Scripts/linux/installExportDeps.sh
             export ARCH_FLAGS=$ARCH_FLAGS_PI3
-            python3 Scripts/buildScript.py --configure --exportpath="/tmp/buildRasp/" --os=linux --configuration=Debug --packagesuffix=Rpi3 --build --package --export
             python3 Scripts/buildScript.py --clean
-            python3 Scripts/buildScript.py --configure --exportpath="/tmp/buildRasp/" --os=linux --configuration=Release --packagesuffix=Rpi3 --build --package --export
-            arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "/tmp/buildRasp/dependenciesRasp3.txt"
+            $BUILDLGML_CMD_BASE --configuration=Release --packagesuffix=Rpi3
+            arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "/tmp/buildRasp/dependenciesRpi3.txt"
             python3 Scripts/buildScript.py --clean
             export ARCH_FLAGS=$ARCH_FLAGS_PI2
-            python3 Scripts/buildScript.py --configure --exportpath="/tmp/buildRasp/" --os=linux --configuration=Debug --packagesuffix=Rpi2 --build --package --export
-            python3 Scripts/buildScript.py --configure --exportpath="/tmp/buildRasp/" --os=linux --configuration=Release --packagesuffix=Rpi2 --build --package --export
-            arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "/tmp/buildRasp/dependenciesRasp2.txt"
+            $BUILDLGML_CMD_BASE --configuration=Release --packagesuffix=Rpi2
+            arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "/tmp/buildRasp/dependenciesRpi2.txt"
 
       - store_artifacts:
           path: /tmp/buildRasp/
@@ -141,7 +166,8 @@ workflows:
     jobs:
       - buildOSX
       - build_rasp
-      - build
+      - buildu16
+      - buildu14
       - build32
 
 
