CI : fix osx in circleci v2.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,9 +141,8 @@ jobs:
 
   buildOSX:
     working_directory: ~/LGML
-    machine:
-      xcode:
-        version: 8.2
+    macos:
+      xcode: "9.0"
       environment:
         DST_LGML_PATH: /tmp/buildOSX
 
