--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
             apt-get -qq update
             apt-get install -y git
             git submodule update --init --recursive
-            apt-get install -y g++-arm-linux-gnueabihf pkg-config
+            apt-get install -y g++-5-arm-linux-gnueabihf pkg-config
             . /etc/lsb-release
             echo "deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME main universe" >> /etc/apt/sources.list
             echo "deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME-updates main universe" >> /etc/apt/sources.list
