--- a/Builds/VisualStudio2017/LGML_App.vcxproj
+++ b/Builds/VisualStudio2017/LGML_App.vcxproj
@@ -405,6 +405,7 @@
     <ClCompile Include="..\..\Source\Time\TimeManager.cpp"/>
     <ClCompile Include="..\..\Source\Time\TimeManagerUI.cpp"/>
     <ClCompile Include="..\..\Source\Time\TimeMasterCandidate.cpp"/>
+    <ClCompile Include="..\..\Source\UI\StackedContainerUI.cpp"/>
     <ClCompile Include="..\..\Source\UI\AppPropertiesUI.cpp"/>
     <ClCompile Include="..\..\Source\UI\MainWindow.cpp"/>
     <ClCompile Include="..\..\Source\UI\LGMLDragger.cpp"/>
@@ -2282,6 +2283,7 @@
     <ClInclude Include="..\..\Source\Time\TimeManager.h"/>
     <ClInclude Include="..\..\Source\Time\TimeManagerUI.h"/>
     <ClInclude Include="..\..\Source\Time\TimeMasterCandidate.h"/>
+    <ClInclude Include="..\..\Source\UI\StackedContainerUI.h"/>
     <ClInclude Include="..\..\Source\UI\AppPropertiesUI.h"/>
     <ClInclude Include="..\..\Source\UI\MainWindow.h"/>
     <ClInclude Include="..\..\Source\UI\LGMLDragger.h"/>
