--- a/Builds/VisualStudio2017/LGML_App.vcxproj.filters
+++ b/Builds/VisualStudio2017/LGML_App.vcxproj.filters
@@ -532,6 +532,9 @@
     <ClCompile Include="..\..\Source\Controllable\Parameter\ParameterContainerSync.cpp">
       <Filter>LGML\Source\Controllable\Parameter</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Controllable\Parameter\UI\Point2DParameterUI.cpp">
+      <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Controllable\Parameter\UI\GenericParameterContainerEditor.cpp">
       <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
     </ClCompile>
@@ -2876,6 +2879,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Controllable\Parameter\ParameterContainerSync.h">
       <Filter>LGML\Source\Controllable\Parameter</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Controllable\Parameter\UI\Point2DParameterUI.h">
+      <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Controllable\Parameter\UI\GenericParameterContainerEditor.h">
       <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
